| Bug #54497 | Incorrect handling of CREATE NODEGROUP with multiple nodes wo/ nodegroup | ||
|---|---|---|---|
| Submitted: | 14 Jun 2010 19:32 | Modified: | 9 Jul 2010 14:36 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-7.0 | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[14 Jun 2010 19:32]
Jonas Oreland
[14 Jun 2010 19:35]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/111070 3596 Jonas Oreland 2010-06-14 ndb - bug#54497 - check that newly added nodegroup includes "me" in Suma::CREATE_NODEGROUP_IMPL_REQ
[14 Jun 2010 19:36]
Jonas Oreland
pushed to 7.0.16 and 7.1.5
[9 Jul 2010 14:36]
Jon Stephens
Documented bugfix in the NDB-7.0.16 and 7.1.5 changelogs as follows:
When adding multiple new node groups to a MySQL Cluster, it was
necessary for each new node group to add only the nodes to be
assigned to the new node group, create that node group using
CREATE NODEGROUP, then repeat this process for each new node
group to be added to the cluster. The fix for this issue makes
it possible to add all of the new nodes at one time, and then
issue several CREATE NODEGROUP commands in succession.
Also noted this issue and its resolution in the Manual section covering online node addition.
Closed.
