ndb - bug#54497 - check that newly added nodegroup includes "me" in Suma::CREATE_NODEGROUP_IMPL_REQ